--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,12 @@
 			<version>2.4</version>
 		</dependency>
 
+	<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot</artifactId>
+		<version>1.5.3.RELEASE</version>
+	</dependency>
+
 	</dependencies>
 
 </project>
