--- a/pom.xml
+++ b/pom.xml
@@ -140,7 +140,11 @@
 		<artifactId>spring-boot</artifactId>
 		<version>1.5.3.RELEASE</version>
 	</dependency>
-
+     <dependency>
+    	<groupId>joda-time</groupId>
+    	<artifactId>joda-time</artifactId>
+    	<version>2.9.4</version>
+    </dependency>
 	</dependencies>
 
 </project>
