--- a/pom.xml
+++ b/pom.xml
@@ -152,13 +152,17 @@
 		<artifactId>spring-boot</artifactId>
 		<version>1.5.3.RELEASE</version>
 	</dependency>
-     <dependency>
+    <!--  <dependency>
     	<groupId>joda-time</groupId>
     	<artifactId>joda-time</artifactId>
     	<version>2.9.4</version>
-    </dependency>
-    
-   <!--  <dependency>
+    </dependency> -->
+    <dependency>
+    <groupId>joda-time</groupId>
+    <artifactId>joda-time</artifactId>
+    <version>2.7</version>
+</dependency>
+    <!-- <dependency>
   <groupId>org.jadira.usertype</groupId>
   <artifactId>usertype.core</artifactId>
   <version>3.1.0.CR10</version>
@@ -167,7 +171,7 @@
 <dependency>
     <groupId>org.jadira.usertype</groupId>
     <artifactId>usertype.core</artifactId>
-    <version>6.0.1.GA</version>
+    <version>3.2.0.GA</version>
 </dependency>
 
 	</dependencies>
