--- a/pom.xml
+++ b/pom.xml
@@ -147,11 +147,11 @@
 			<version>2.4</version>
 		</dependency>
 
-	<dependency>
+	<!-- <dependency>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot</artifactId>
 		<version>1.5.3.RELEASE</version>
-	</dependency>
+	</dependency> -->
     <!--  <dependency>
     	<groupId>joda-time</groupId>
     	<artifactId>joda-time</artifactId>
