--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,8 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.4</version>
 		</dependency>
+		
+		
 
 	<!-- <dependency>
 		<groupId>org.springframework.boot</groupId>
@@ -172,6 +174,12 @@
     <groupId>org.jadira.usertype</groupId>
     <artifactId>usertype.core</artifactId>
     <version>3.2.0.GA</version>
+</dependency>
+
+<dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-taglibs</artifactId>
+    <version>4.2.3.RELEASE</version>
 </dependency>
 
 	</dependencies>
