--- a/pom.xml
+++ b/pom.xml
@@ -181,6 +181,11 @@
     <artifactId>spring-security-taglibs</artifactId>
     <version>4.2.3.RELEASE</version>
 </dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.1.0</version>
+		</dependency>
 
 	</dependencies>
 
